--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "baseball",
+  "name": "mlb-project-1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "axios": "^0.24.0",
+    "bulma": "^0.9.3",
     "next": "12.0.7",
-    "next-redux-wrapper": "^7.0.5",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "sass": "^1.45.0"
   }
 }
